--- a/src/roles/talos/tasks/wait_k8s.yaml
+++ b/src/roles/talos/tasks/wait_k8s.yaml
@@ -2,6 +2,6 @@
   wait_for:
     host: "{{ cluster_endpoint | regex_replace('https://', '') | regex_replace(':6443', '') }}"
     port: 6443
-    delay: 2
+    sleep: 2
     timeout: 300
     state: started
