--- a/src/roles/talos/tasks/reset.yaml
+++ b/src/roles/talos/tasks/reset.yaml
@@ -1,6 +1,5 @@
 - include_tasks: wait_talos.yaml
 
-- name: Reset node
+- name: Reset node(s)
   ansible.builtin.command: |
     talosctl reset {{ talos_args }} --reboot --graceful=false --system-labels-to-wipe EPHEMERAL
-  no_log: true
