--- a/src/roles/talos/tasks/upgrade.yaml
+++ b/src/roles/talos/tasks/upgrade.yaml
@@ -8,11 +8,11 @@
   retries: 50
   delay: 5
 
-- name: Upgrade node
+- name: Upgrade nodes
   ansible.builtin.command: >
     talosctl upgrade {{ talos_args }} --force --preserve --image={{ (_image.stdout | from_yaml).spec.machine.install.image }}
   register: _output
   until: _output.rc == 0
+  retries: 2
+  delay: 10
   throttle: "{{ 0 if task == 'upgrade_fast' else 1 }}"
-  retries: 50
-  delay: 5
