--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,5 @@
 FROM alpine:latest
 
-# Install dependencies and tools
 RUN apk add --no-cache ansible curl py3-kubernetes helm
 
 RUN ansible-galaxy collection install kubernetes.core
@@ -14,16 +13,15 @@ RUN curl -L https://api.github.com/repos/fluxcd/flux2/releases/latest -o /tmp/me
     curl -L https://github.com/fluxcd/flux2/releases/download/v${VERSION}/flux_${VERSION}_linux_amd64.tar.gz -o /tmp/flux.tar.gz && \
     tar -xzvf /tmp/flux.tar.gz -C /usr/bin && rm /tmp/metadata.json /tmp/flux.tar.gz && \
     chmod +x /usr/bin/flux
-
-# Create user and directories to prevent running as root
-# A default key is created to prevent the playbook from failing if no key is provided
-RUN adduser -D alpine && mkdir -p /host /data/patches /data/configs && echo "Default key, don't use!" | tee /host/.vault_key && \
-    chown -R alpine:alpine /data /host
-
-USER alpine
-
-COPY ./src /src
+    
+RUN adduser -D alpine && mkdir -p /data/patches /data/configs /host && chown -R alpine:alpine /data /host
+    
+COPY . /src
 
 WORKDIR /src
 
-CMD ["/usr/bin/ansible-playbook", "/src/playbooks/main.yaml", "--connection", "local", "-i", "/host/config.yaml"]
+RUN chmod +x /src/entrypoint.sh
+
+USER alpine
+
+ENTRYPOINT [ "/src/entrypoint.sh" ]
