--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,17 +7,10 @@ services:
     network_mode: host
     stdin_open: true
     tty: true
-    build: .
-    command:
-      - /usr/bin/ansible-playbook
-      - /src/playbooks/main.yaml
-      - --connection
-      - local
-      - -i
-      - /host/config.yaml
-      - -vv
+    build: ./src
+    # command: debug
     volumes:
       - ./dev.yaml:/host/config.yaml:ro
       - ~/.talos:/host/.talos
       - ~/.kube:/host/.kube
-      - ./data:/data/
+      # - ./data:/data/
