Rename wait tasks

--- a/src/roles/talos/tasks/utils/wait_k8s.yaml
+++ b/src/roles/talos/tasks/utils/wait_k8s.yaml
@@ -1,4 +1,4 @@
-- name: Make sure the Kubernetes API is available
+- name: Wait for the Kubernetes API to be available
   wait_for:
     host: "{{ cluster_endpoint | regex_replace('https://', '') | regex_replace(':6443', '') }}"
     port: 6443
