--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     stdin_open: true
     tty: true
     build: ./src
-    # command: debug
+    command: debug
     volumes:
       - ./dev.yaml:/host/config.yaml:ro
       - ~/.talos:/host/.talos
