--- a/src/tasks/bootstrap.yaml
+++ b/src/tasks/bootstrap.yaml
@@ -1,16 +1,16 @@
-- include_tasks: utils/wait_talos.yaml
+- include_tasks: tasks/utils/wait_talos.yaml
 
 - name: Make sure etcd is ready
-  ansible.builtin.command: |
+  ansible.builtin.command: >
     talosctl service etcd status {{ talos_args }}
   register: _etcd
   until: _etcd.rc == 0 and (_etcd.stdout.find('STATE    Preparing') != -1 or _etcd.stdout.find('STATE    Running') != -1)
   changed_when: false
-  retries: 5
+  retries: 50
   delay: 5
 
 - name: Bootstrap cluster
-  ansible.builtin.command: |
+  ansible.builtin.command: >
     talosctl bootstrap {{ talos_args }}
   when: _etcd.stdout.find('STATE    Running') == -1
   until: _output.rc == 0
@@ -18,10 +18,10 @@
   retries: 5
   delay: 5
 
-- include_tasks: utils/wait_k8s.yaml
+- include_tasks: tasks/utils/wait_k8s.yaml
 
 - name: Get kubeconfig
-  ansible.builtin.command: |
+  ansible.builtin.command: >
     talosctl kubeconfig {{ talos_args }} {{ datastore }}/configs/kubeconfig --merge=false --force --force-context-name {{ cluster_name }}
   register: _output
   until: _output.rc == 0
@@ -46,7 +46,7 @@
   when: _kubeconfig_host.stat.exists
 
 - name: Merge kubeconfig
-  ansible.builtin.command: |
+  ansible.builtin.command: >
     talosctl kubeconfig {{ talos_args }} {{ kubeconfig_host }} --force --force-context-name {{ cluster_name }}
   register: _output
   until: _output.rc == 0
