--- a/example.yaml
+++ b/example.yaml
@@ -21,11 +21,13 @@ cluster:
   vars:
     # Task to perform (apply | reset)
 
-    # All tasks will run apply before running he selected task
+    # All tasks will run "apply" before running the selected task
 
     # Apply: apply the configuration to the cluster
     # This does not guarantee that the cluster is in the desired state
-    # For example, if you set the cni to cillium, then switch to flannel, cilium will remain installed
+    # Old components are not removed before adding new ones.
+    # Make sure to remove them before replacing them with their counterparts
+    # This is done to prevent accidental data loss
 
     # Reset: wipe the entire cluster and reapply the configuration
     # WARNING! This will delete all data from the cluster including everything under /var
@@ -36,9 +38,13 @@ cluster:
     cluster_name: example
 
     # IP or FQDN that will be used to reach the kubernetes API
+    # This example sets the cluster endpoint to the ip of the first controlplane node
     cluster_endpoint: https://{{ groups['controlplane'][0] }}:6443
 
     # The network plugin to use (cilium | flannel)
+    # If you choose cilium, flannel will be automatically disabled
+    # If you later chose to switch to flannel, you must manually remove cilium first
+    # This can be done by using helm uninstall cilium -n kube-system
     cni: cilium
 
     # Add additional SANs to the TLS certificate
@@ -68,7 +74,7 @@ cluster:
 
       # worker: {}
 
-    cilium:
+    cilium: # Optional
       # Cilium version to install
       version: 1.16.0 # Optional
 
@@ -78,8 +84,9 @@ cluster:
       # Enable the default network policy
       # This will block traffic between pods except coredns, but allow traffic to the internet
       # kube-system and the specified cilium namespace are considered privileged namespaces,
-      # all pods in these namespaces have no restrictions
-      default_policy: false # Optional
+      # all pods in these namespaces have no restrictions.
+      # Pods running in the host network are also considered privileged, and have no restrictions.
+      use_default_policy: false # Optional
 
       # Add additional values to the cilium helm chart
       helm_values: # Optional
@@ -99,7 +106,7 @@ cluster:
     # Only github repositories are currently supported
     fluxcd:
       enabled: false
-      update: true # Update the FluxCD configuration on each run
+      update: true # Update the FluxCD configuration on each run (Optional)
       branch: main
       user: User
       repo: GitOps
