--- a/example.yaml
+++ b/example.yaml
@@ -18,21 +18,10 @@ cluster:
             machine:
               network:
                 hostname: b
+        # All nodes in range from 192.168.1.10 to 192.168.1.20
+        # 192.168.1.[10:20]:
+
   vars:
-    # Task to perform (apply | reset)
-
-    # All tasks will run "apply" before running the selected task
-
-    # Apply: apply the configuration to the cluster
-    # This does not guarantee that the cluster is in the desired state
-    # Old components are not removed before adding new ones.
-    # Make sure to remove them before replacing them with their counterparts
-    # This is done to prevent accidental data loss
-
-    # Reset: wipe the entire cluster and reapply the configuration
-    # WARNING! This will delete all data from the cluster including everything under /var
-    task: apply
-
     # Make sure you change the cluster name to something unique
     # WARNING! This will overwrite the existing context with this name in your talosconfig and kubeconfig
     cluster_name: example
@@ -53,11 +42,14 @@ cluster:
     #   - kubernetes.example.com
 
     # Set the Talos/Kubernetes version to install
+    # NOTE: Even if these variables are optional, it is highly recommened to set a version.
+    # If you don't set a version, Talos-Manager will automatically upgrade your cluster to the newest version.
     # Patches override these values if their respective fields are set
     # Upgrades are automatic, if an image/version change is detected
-    talos_image: ghcr.io/siderolabs/installer # (Optional)
-    talos_version: v1.7.5 # (Optional)
-    k8s_version: 1.30.1 # (Optional)
+
+    # talos_image: ghcr.io/siderolabs/installer # (Optional)
+    talos_version: v1.7.5 # (Optional, but recommended)
+    k8s_version: 1.30.1 # (Optional, but recommended)
 
     # Add additional patches to the selected category (Optional)
     # You can also define per machine patches by adding vars.patch to the node as demonstrated above
@@ -76,7 +68,7 @@ cluster:
 
     cilium: # Optional
       # Cilium version to install
-      version: 1.16.0 # Optional
+      version: 1.16.0 # Optional, but recommended
 
       # Namespace to install cilium to
       namespace: kube-system # Optional
@@ -110,7 +102,6 @@ cluster:
       branch: main
       user: User
       repo: GitOps
-      path: clusters/example # Path to the FluxCD configuration
+      path: clusters/example # Path to the FluxCD configuration.
       token: "" # GitHub PAT (Required permissions: Administration: RW, Contents: RW, Metadata: RO)
       sops: "" # Base64 encoded SOPS private key (Optional)
-
